Sidebar border to stop overflow and maintain size
Sidebar elements overflow on smaller window sizes so a border-right
property was given.

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ button {
     gap: 3rem;
     padding: 1.5rem;
     font-weight: bold;
+    border-right: 60px solid #1992d4;
 }
 
 #side-bar div {
